# automatax

./: .envrc.recommended  .gitignore  Dockerfile  README.md  mkdocs.yml  pixi.toml  pyproject.toml
docs/: api.md  index.md  semirings.md
docs/api/: main.md  semirings.md
docs/api/nfa/: semirings.md
examples/motion_planning/: pusher.py
examples/strelmonitoring/: README.Md  README.md  monitoring_example.py  offline_bool_monitoring.py  offline_monitoring.py  param_map_1.json  param_map_2.json  param_map_3.json  param_map_3_log_2024_11_11_20_26_11.csv  param_map_4.json  param_map_4_log_2024_11_11_21_14_01.csv  param_map_5.json  run_all_experiments.py
examples/strelmonitoring/sample_traj_data/: param_map_5.json
examples/strelmonitoring/sample_traj_data/Map_1/run_1/: readme.MD
examples/strelmonitoring/sample_traj_data/Map_1/whole_run/: param_map_1.json
examples/strelmonitoring/sample_traj_data/Map_2/whole_run/: param_map_2_log_2024_11_12_13_53_21.csv
examples/strelmonitoring/sample_traj_data/Map_3/run_1/: param_map_3_2024_11_12_17_41_54.json
examples/strelmonitoring/sample_traj_data/Map_3/run_2/: param_map_3_2024_11_12_17_51_14.json
examples/strelmonitoring/sample_traj_data/Map_3/whole_run/: param_map_3.json
examples/strelmonitoring/sample_traj_data/Map_4/: param_map_4_2024_11_12_16_54_01.json  param_map_4_log_2024_11_12_16_54_58.csv
examples/strelmonitoring/sample_traj_data/Map_4/run_1/: param_map_4_2024_11_12_16_38_16.json  param_map_4_log_2024_11_12_16_39_07.csv
examples/strelmonitoring/sample_traj_data/Map_4/run_2/: param_map_4_2024_11_12_16_43_19.json  param_map_4_log_2024_11_12_16_43_54.csv
examples/strelmonitoring/sample_traj_data/Map_4/run_3/: param_map_4_2024_11_12_16_46_58.json  param_map_4_log_2024_11_12_16_47_34.csv
examples/strelmonitoring/sample_traj_data/Map_4/whole_run/: param_map_4.json
examples/strelmonitoring/sample_traj_data/Map_5/: ReadMe.MD  param_map_5_log_2024_11_12_10_27_37.csv
examples/strelmonitoring/sample_traj_data/Map_5/run_1/: param_map_5_2024_11_12_17_09_33.json
examples/strelmonitoring/sample_traj_data/Map_5/run_2/: param_map_5_2024_11_12_17_17_25.json  param_map_5_log_2024_11_12_17_18_54.csv
examples/strelmonitoring/sample_traj_data/Map_5/run_3/: param_map_5_2024_11_12_17_22_38.json  param_map_5_log_2024_11_12_17_24_05.csv
examples/strelmonitoring/sample_traj_data/Map_5/whole_run/: param_map_5.json
examples/strelmonitoring/swarmlab/: example_simulation.m  run_swarm_simulation.m
examples/strelmonitoring/test_logs/: param_map_1_log_2024_11_11_15_57_11.csv  param_map_2_log_2024_11_11_20_06_43.csv  param_map_5_log_2024_11_11_21_18_31.csv  param_map_5_log_2024_11_11_21_20_23.csv
examples/strelmonitoring/trial_code/: example_olfati_saber.m
examples/swarm-monitoring/: monitoring_example.py  run_hscc_experiments.py
examples/swarm-monitoring/data/Map_1/: log_2024_11_12_14_09_20.csv
examples/swarm-monitoring/data/Map_4/: log_2024_11_12_11_07_11.csv
examples/swarm-monitoring/data/Map_5/: log_2024_11_12_17_10_39.csv
overrides/: main.html
src/automatax/: __init__.py  predicate.py
src/automatax/automaton/: __init__.py
src/automatax/semirings/: __init__.py  utils.pyi
src/automatix/: __init__.py  automaton.py  predicate.py  semirings.py
src/automatix/afa/: algebra.py  automaton.py  strel.py
src/automatix/algebra/: abc.py
src/automatix/algebra/polynomials/: boolean.py
src/automatix/automaton/: __init__.py
src/automatix/logic/: strel.lark  strel.py
src/automatix/nfa/: __init__.py  automaton.py  predicate.py  semirings.py
src/matrix_semiring/: __init__.py  utils.py
tests/: test_automaton_operator.py  test_semiring.py
tests/nfa/: test_automaton_operator.py  test_jax_automaton_operator.py  test_jax_semiring.py  test_semiring.py
