[project]
name = "automatax"
version = "0.1.0"
requires-python = "~=3.9"
dependencies = [
  "jax~=0.4",
  "jaxtyping~=0.2",
  "numpy~=1.26.4",
  "equinox~=0.11",
  "sympy~=1.12",
  "typing-extensions",
  "networkx~=3.2.1",
]

[project.optional-dependencies]
docs = ["pdoc"]
test = ["pytest", "coverage"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.mypy]
# ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "N", "B", "ANN", "PYI"]
ignore = ["ANN101", "ANN102", "F722"]

[tool.ruff.lint.per-file-ignores]
"*.py" = ["B905", "E203", "E501", "W291", "W293"]
"*.pyi" = ["B", "E501", "E701"]

[tool.flake8]
max-line-length = 127
max-complexity = 10
per-file-ignores = [
  "__init__.py: F401",
  "__init__.pyi: F401",
  "*.py: B905, B907, B950, E203, E501, W503, W291, W293",
  "*.pyi: B, E301, E302, E305, E501, E701, E704, W503",
]


[tool.isort]
profile = "black"
line_length = 127
skip_gitignore = false
group_by_package = true

[tool.black]
line-length = 127

[tool.pyright]
include = ["src"]
pythonVersion = "3.9"
pythonPlatform = "All"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.9"
pythonPlatform = "All"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
